tests/rosetta/out/Zig/chaocipher.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenchaocipher3160371168/001/prog.zig:20:60: error: use of undeclared identifier 'handleError'
/tmp/TestMochiZigGoldenchaocipher3160371168/001/prog.zig:26:67: error: use of undeclared identifier 'handleError'
